--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Your name here - HTML5 Boilerplate</title>
     <meta name="description" content="This is my HTML5 boilerplate.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/screen.css">
+    <link rel="shortcut icon" href="apple-touch-icon.png
+    " type="image/x-icon">    <link rel="stylesheet" href="css/screen.css">
+    <link rel="shortcut icon" href="logo.svg" type="image/x-icon">
 </head>
 
 <body>
