--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Simon Herbout - HTML5 Boilerplate</title>
-    <meta name="description" content="This is my HTML5 boilerplate."/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
+    <meta name="description" content="This is my HTML5 boilerplate.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="css/screen.css">
 
-    <link rel="icon" href="favicon.svg"/>
-    <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
-    <link rel="manifest" href="manifest.json"/>
+    <link rel="icon" href="favicon.svg" >
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" >
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
